tests/machine/x/cpp/left_join_multi.error
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp:46:12: error: ‘i’ was not declared in this scope
   46 |   decltype(i) item;
      |            ^
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp:46:12: error: ‘i’ was not declared in this scope
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp:65:52: error: cannot convert ‘Item’ to ‘int’ in initialization
   65 |             __items.push_back(Result{o.id, c.name, i});
      |                                                    ^
      |                                                    |
      |                                                    Item
/workspace/mochi/tests/machine/x/cpp/left_join_multi.cpp:69:52: error: cannot convert ‘Item’ to ‘int’ in initialization
   69 |             __items.push_back(Result{o.id, c.name, i});
      |                                                    ^
      |                                                    |
      |                                                    Item
