tests/machine/x/cpp/left_join_multi.cpp
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <any>
#include <iostream>
#include <string>
#include <vector>

inline bool __any_eq(const std::any &a, const std::any &b) {
  if (a.type() != b.type())
    return false;
  if (a.type() == typeid(int))
    return std::any_cast<int>(a) == std::any_cast<int>(b);
  if (a.type() == typeid(double))
    return std::any_cast<double>(a) == std::any_cast<double>(b);
  if (a.type() == typeid(bool))
    return std::any_cast<bool>(a) == std::any_cast<bool>(b);
  if (a.type() == typeid(std::string))
    return std::any_cast<std::string>(a) == std::any_cast<std::string>(b);
  return false;
}
inline void __print_any(const std::any &a) {
  if (a.type() == typeid(int))
    std::cout << std::any_cast<int>(a);
  else if (a.type() == typeid(double))
    std::cout << std::any_cast<double>(a);
  else if (a.type() == typeid(bool))
    std::cout << (std::any_cast<bool>(a) ? "true" : "false");
  else if (a.type() == typeid(std::string))
    std::cout << std::any_cast<std::string>(a);
}

struct Customer {
  int id;
  decltype(std::string("Alice")) name;
};
struct Order {
  int id;
  int customerId;
};
struct Item {
  int orderId;
  decltype(std::string("a")) sku;
};
struct Result {
  std::any orderId;
  std::any name;
  decltype(i) item;
};
int main() {
  std::vector<Customer> customers = {Customer{1, std::string("Alice")},
                                     Customer{2, std::string("Bob")}};
  std::vector<Order> orders = {Order{100, 1}, Order{101, 2}};
  std::vector<Item> items = {Item{100, std::string("a")}};
  std::vector<Result> result = ([&]() {
    std::vector<Result> __items;
    for (auto o : orders) {
      for (auto c : customers) {
        if (!((o.customerId == c.id)))
          continue;
        {
          bool __matched1 = false;
          for (auto i : items) {
            if (!((o.id == i.orderId)))
              continue;
            __matched1 = true;
            __items.push_back(Result{o.id, c.name, i});
          }
          if (!__matched1) {
            auto i = std::decay_t<decltype(*(items).begin())>{};
            __items.push_back(Result{o.id, c.name, i});
          }
        }
      }
    }
    return __items;
  })();
  std::cout << std::string("--- Left Join Multi ---") << std::endl;
  for (auto r : result) {
    {
      __print_any(r.orderId);
      std::cout << ' ';
      __print_any(r.name);
      std::cout << ' ';
      std::cout << r.item;
      std::cout << std::endl;
    }
  }
  return 0;
}
